Resolve "Move AWE framework to Spring Boot 3"